# KnowledgeOS-AI-Powered-Multi-Source-Knowledge-Assistant

./: .env.example  .gitignore  ARCHITECTURE.md  README.md  create_chunks.py  output.json  process_incoming.py  process_video.py  pyproject.toml  stt.py
backend/: __init__.py
backend/app/: __init__.py  main.py
backend/app/api/: schemas.py
backend/app/api/routers/: ingestion.py  knowledge.py
backend/app/config/: settings.py
backend/app/database/: __init__.py  repository.py
backend/app/models/: __init__.py  documents.py
backend/app/processors/: __init__.py  extractors.py
backend/app/services/: __init__.py  answering.py  file_staging.py  indexing.py
backend/app/web/: index.html
backend/tests/: test_answering.py  test_file_staging.py
jsons/: 01_output.mp3.json
unused/: stt.py
unused/backend/data/: knowledgeos.db
