[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "knowledgeos"
version = "0.1.0"
description = "A local-first, multi-source knowledge assistant"
readme = "ARCHITECTURE.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.6,<3.0",
    "python-multipart>=0.0.12,<1.0",
    "uvicorn[standard]>=0.32,<1.0",
]

[project.optional-dependencies]
documents = [
    "pypdf>=5.0,<7.0",
    "python-docx>=1.1,<2.0",
    "python-pptx>=1.0,<2.0",
]
ocr = [
    "Pillow>=10.0,<12.0",
    "pytesseract>=0.3,<1.0",
]
dev = [
    "httpx>=0.27,<1.0",
    "pytest>=8.3,<9.0",
    "ruff>=0.8,<1.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.setuptools.packages.find]
include = ["backend*"]

# -----------------------------
# Vercel Configuration
# -----------------------------
[tool.vercel]
entrypoint = "backend.app.main:app"